2006-08-11  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* AutoOp plugin: adapted to the new IRC framework.
	* AutoOp plugin: trigger autoop on nick change too.
	* New Auth Framework: allow? method now informs a user when they don't
	have permission to do what they asked for.

2006-08-10  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Fix a bug in new IRC Framework: the list of channels a quitting user was
	on was not built correctly, causing an exception when the user was not
	in the first channel in the list of channels.
	* Fix a bug in new Auth Framework: BotUser's name is changed via
	username=, not name=.
	* New HalfLife 2 plugin from ocr: queries online servers for online
	status and number of users.

2006-08-07  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Add kick method to kernel: plugins can now use
		@bot.kick channel, user, reason
	to kick a user from a channel
	* RSS plugin: fix rewatch_rss method
	* RSS plugin: the different ways to represent channels before and
	after the New IRC Framework was causing strange problems such as
	watched feed not being listed as such, undeletable watches, double
	watches etc. Fix this by checking both for the Channel objects and
	their to_s form when checking for watches or deleting them.

2006-08-06  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Updating the ChangeLog again: describe the new stuff in trunk which
	will be made available in the next release. Use Gnu style for new
	changelog entries (yyyy-mm-dd name <email address>\n<tab> ...):
	there's a macro for this since at least Vim 6.x and higher, called by
	<Leader>o (default leader: slash (\))
	* New IRC Framework: Server, Channels, User, Netmasks etc are all
	proper Ruby objects. The better organization will allow multi-server
	connections to be implemented more easily
	* Modularize core: split the internal functionality from what can be
	implemented as botmodules (which work just the same as plugins). Move